<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_card"
    tools:context=".ui.view.fragments.RecipeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_ver_15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_ver_85"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_hor_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_hor_40"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_hor_85"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guide_hor_10"
            tools:text="Fragment Prueba"
            android:textSize="@dimen/s_30"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_hor_10"
            app:layout_constraintBottom_toTopOf="@id/guide_hor_40"
            android:contentDescription="@string/imgDescriptionRecipe" />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guide_ver_15"
            app:layout_constraintEnd_toStartOf="@id/guide_ver_85"
            app:layout_constraintTop_toBottomOf="@id/guide_hor_40"
            app:layout_constraintBottom_toTopOf="@+id/guide_hor_85"
            tools:text="Description"
            android:textSize="@dimen/s_20"
            android:gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_hor_85"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/d_15"
                android:text="@string/txtCerrar"
                android:paddingHorizontal="@dimen/d_20"
                android:paddingVertical="@dimen/d_15"
                android:background="@color/teal_200"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/d_15"
                android:text="@string/txtMapa"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/d_20"
                android:paddingVertical="@dimen/d_15"
                android:background="@color/teal_700"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>